site/styles/index.css
body {
    margin:0px;
    font-family: Arial, Helvetica, sans-serif;
}

header {
    margin-top: 0px;
    height: 69px;
}

header > p {
    margin:0px;
    padding: 10px;
}

article {
    padding:10px;
}

.profile-picture {
    border: solid 2px black;
    width: 200px;
    height: 200px;
}

.team-member-text > p {
    padding-bottom: 10px;
}

@media only screen and (min-width: 700px){
    .team-member-section {
        display: flex;
        justify-content: space-between;
        flex-direction: row-reverse;
    }

    p {
        margin-top: 0px;
    }
}

@media only screen and (min-width: 1000px) {
    body {
        padding-left: 15%;
        padding-right: 15%;
        font-family: Arial, Helvetica, sans-serif;
        margin: 0;
    }

    html {
        scroll-behavior: smooth;
    }

    /* --- Aside --- */
    aside {
        float: right;
        margin-top: 10px;
        position: fixed; /*  sticky  */
        right: 10%;
        top: 100px;
        margin-bottom: 100vh;
        overflow-y: auto;
        overflow-x: hidden;
    }

    .content-table, .content-table td, .content-table th {
        border: 1px solid black;
    }

    .header-link {
        text-decoration: none;
        color: inherit;
        font-weight: bolder;
    }

    article {
        margin: 10px;
    }

    h1 {
        font-size: 40px;
    }

    h2 {
        font-size: 30px;
    }

    .scroll-target {
        scroll-margin: 75px;
    }

    .opening-hours-table th {
        text-align: right;
    }
    
    .opening-hours-table th[colspan="2"] {
        text-align: left;
    }
    
    .team-member-section {
        display: flex;
    }
    
    .about-member-text {
        margin: 0 0 0 10px;
        width: 50%;
    
    }
    
    .scrollable-table{
        max-width: 100%;
        max-height: 570px;
        overflow: auto;
        display: block;
    }
    }
    
    @media only screen and (max-width: 990px) {
        aside{
            display: none;
        }
    }


@media only screen and (min-width: 1200px){
    body {
        padding-left: 20%;
        padding-right: 20%;
    }
}

